<resources>
    <string name="app_name">易行地图</string>
    <string name="activity_main_tabs_bottom_text_home">首页</string>
    <string name="activity_main_tabs_bottom_text_travel">出行</string>
    <string name="activity_main_tabs_bottom_text_mine">我的</string>
    <string name="fragment_normal_search_tv">查找地点、公交、地铁</string>
    <string name="fragment_normal_car_text">驾车</string>
    <string name="fragment_normal_bus_text">公交</string>
    <string name="fragment_normal_walk_text">步行</string>
    <string name="fragment_normal_bike_text">骑行</string>
    <string name="fragment_normal_where_go_often">常去地点</string>
    <string name="fragment_searching_et_text">搜索</string>
    <string name="activity_travel_et_search_bar_from">我的位置</string>
    <string name="activity_travel_et_search_bar_from_hint">输入起点</string>
    <string name="activity_travel_et_search_bar_to_hint">输入终点</string>
    <string name="car">驾车</string>
    <string name="bus">公交</string>
    <string name="bike">骑行</string>
    <string name="walk">步行</string>
    <string name="truck">货车</string>
    <string name="fragment_searching_tv_eat">美食</string>
    <string name="fragment_searching_tv_hotel">酒店</string>
    <string name="fragment_searching_tv_sight">景点</string>
    <string name="fragment_searching_tv_gas">加油站</string>
    <string name="fragment_searching_tv_toilet">厕所</string>
    <string name="fragment_searching_tv_shop">商店</string>
    <string name="activity_main_pop_menu_change_layer_navigation">导航地图</string>
    <string name="activity_main_pop_menu_change_layer_normal">标准地图</string>
    <string name="activity_main_pop_menu_change_layer_night">夜景地图</string>
    <string name="activity_main_pop_menu_change_layer_satellite">卫星地图</string>
    <string name="fragment_normal_offline_text">离线</string>
    <string name="recycle_item_search_history_point_route">路线</string>
    <string name="activity_main_progress_bar_load_text">正在加载</string>
    <string name="recycle_item_search_history_root">清空历史记录</string>
    <string name="fragment_poi_call_text">致电</string>
    <string name="activity_travel_pop_window_tv_cancel">取消</string>
    <string name="recycle_item_travel_pop_window_title">请选择地点</string>
    <string name="fragment_normal_click_to_add">点击添加地点</string>
    <string name="fragment_normal_click_to_change">修改</string>
    <string name="activity_select_often_go_title">选择要添加的历史记录</string>
    <string name="recycle_item_search_history_text_delete">删除</string>
    <string name="activity_mine_tip">一些小提示：\n
        1. 空白：app当中存在有留白以及无用的导航，这些大多都是因为时间以及技术问题而没有实现的功能，为了视觉效果而被保留了下来。当然也有官方没有给出的api，例如地点的评论之类的。\n
        2. 定位：我的逻辑是后台持续定位并保存本地，点击定位按钮才将镜头中心移到屏幕中间，且进应用后的移动镜头是从本地读取的记录，默认值是北京。所以就会出现第一次使用应用会将镜头移到北京的情况，且位置改变后在打开应用会出现镜头在上次定位的地方的情况。还有一点值得注意，高德api的定位在debug版出现了不准，慢的情况，简单体验了release版后发现好像没有这些问题了。\n
        3. 出行界面：在体验正式版式该界面的逻辑表现明显与debug版不同，重新切换到debug版后这些疑似“bug”的逻辑却又消失了。虽说如此，但该界面的有些逻辑确实是因为我自身没有处理好代码逻辑的原因。\n
        4. 搜索：app中存在这一定数量的搜索界面，同时为了美观我也放弃了添加搜索按钮。所以需要搜索的时候就请善用回车键吧。当然,也要善用back。\n</string>
</resources>