<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tool="http://schemas.android.com/tools">

    <data>

        <variable
            name="backClick"
            type="android.view.View.OnClickListener" />

        <variable
            name="exchangeClick"
            type="android.view.View.OnClickListener" />

        <variable
            name="popWindowCancelClick"
            type="android.view.View.OnClickListener" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/activity_travel_iv_back"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_margin="20dp"
            android:onClick="@{backClick}"
            android:src="@drawable/ic_back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ProgressBar
            android:id="@+id/activity_travel_search_progress_bar"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginEnd="20dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@id/activity_travel_search_bar"
            app:layout_constraintEnd_toEndOf="@id/activity_travel_search_bar"
            app:layout_constraintTop_toTopOf="@id/activity_travel_search_bar" />

        <LinearLayout
            android:id="@+id/activity_travel_search_bar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:background="@drawable/activity_travel_search_bar_bg"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/activity_travel_iv_back"
            app:layout_constraintTop_toTopOf="parent">

            <EditText
                android:id="@+id/activity_travel_et_from"
                style="@style/TextAppearance.MaterialComponents.Body1"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_marginStart="40dp"
                android:layout_marginEnd="60dp"
                android:background="@null"
                android:hint="@string/activity_travel_et_search_bar_from_hint"
                android:imeOptions="actionDone"
                android:inputType="text"
                android:singleLine="true"
                android:text="@string/activity_travel_et_search_bar_from" />

            <EditText
                android:id="@+id/activity_travel_et_to"
                style="@style/TextAppearance.MaterialComponents.Body1"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_marginStart="40dp"
                android:layout_marginEnd="60dp"
                android:background="@null"
                android:hint="@string/activity_travel_et_search_bar_to_hint"
                android:imeOptions="actionDone"
                android:inputType="text"
                android:singleLine="true" />
        </LinearLayout>

        <ImageView
            android:id="@+id/activity_travel_iv_point_green"
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:layout_marginBottom="3dp"
            android:src="@drawable/ic_activity_travel_point_green"
            app:layout_constraintBottom_toTopOf="@id/activity_travel_iv_point_three_vertical"
            app:layout_constraintEnd_toEndOf="@id/activity_travel_iv_point_three_vertical"
            app:layout_constraintStart_toStartOf="@id/activity_travel_iv_point_three_vertical" />

        <ImageView
            android:id="@+id/activity_travel_iv_point_three_vertical"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginStart="12dp"
            android:src="@drawable/ic_activity_travel_point_three_vertical"
            app:layout_constraintBottom_toBottomOf="@id/activity_travel_search_bar"
            app:layout_constraintStart_toStartOf="@id/activity_travel_search_bar"
            app:layout_constraintTop_toTopOf="@id/activity_travel_search_bar" />

        <ImageView
            android:id="@+id/activity_travel_iv_point_red"
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:layout_marginTop="3dp"
            android:src="@drawable/ic_activity_travel_point_red"
            app:layout_constraintEnd_toEndOf="@id/activity_travel_iv_point_three_vertical"
            app:layout_constraintStart_toStartOf="@id/activity_travel_iv_point_three_vertical"
            app:layout_constraintTop_toBottomOf="@id/activity_travel_iv_point_three_vertical" />

        <View
            android:layout_width="0dp"
            android:layout_height="0.4dp"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="60dp"
            android:background="@color/color_line_bg"
            app:layout_constraintBottom_toBottomOf="@id/activity_travel_search_bar"
            app:layout_constraintEnd_toEndOf="@id/activity_travel_search_bar"
            app:layout_constraintStart_toStartOf="@id/activity_travel_search_bar"
            app:layout_constraintTop_toTopOf="@id/activity_travel_search_bar" />

        <ImageView
            android:id="@+id/activity_travel_iv_search_bar_exchange"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginEnd="20dp"
            android:onClick="@{exchangeClick}"
            android:src="@drawable/ic_activity_travel_search_bar_exchange"
            app:layout_constraintBottom_toBottomOf="@id/activity_travel_search_bar"
            app:layout_constraintEnd_toEndOf="@id/activity_travel_search_bar"
            app:layout_constraintTop_toTopOf="@id/activity_travel_search_bar" />

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/activity_travel_tabs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:elevation="5dp"
            app:layout_constraintTop_toBottomOf="@id/activity_travel_search_bar"
            app:tabIndicatorFullWidth="false"
            app:tabMode="fixed"
            app:tabSelectedTextColor="@color/colorPrimary">

            <com.google.android.material.tabs.TabItem
                android:id="@+id/activity_travel_tab_item_car"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/car" />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/activity_travel_tab_item_bus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bus" />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/activity_travel_tab_item_bike"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bike" />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/activity_travel_tab_item_walk"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/walk" />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/activity_travel_tab_item_truck"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/truck" />
        </com.google.android.material.tabs.TabLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/activity_travel_rv_search_result"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="7dp"
            android:visibility="visible"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/activity_travel_tabs" />

        <LinearLayout
            android:id="@+id/activity_travel_pop_window"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="40dp"
            android:elevation="20dp"
            android:orientation="vertical"
            android:visibility="gone">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#e0e0e0"
                android:elevation="5dp"
                android:gravity="center"
                android:padding="4dp"
                android:text="@string/recycle_item_travel_pop_window_title" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/activity_travel_pop_window_rv"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="#FFFFFF"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tool:listitem="@layout/recycle_item_travel_pop_window" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#eeeeee"
                android:elevation="5dp"
                android:gravity="center"
                android:onClick="@{popWindowCancelClick}"
                android:padding="10dp"
                android:text="@string/activity_travel_pop_window_tv_cancel" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>