<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="mapClick"
            type="android.view.View.OnClickListener" />

        <variable
            name="backClick"
            type="android.view.View.OnClickListener" />

        <variable
            name="cancelClick"
            type="android.view.View.OnClickListener" />

        <variable
            name="layerClick"
            type="android.view.View.OnClickListener" />

        <variable
            name="trafficClick"
            type="android.view.View.OnClickListener" />

        <variable
            name="titleBarBackClick"
            type="android.view.View.OnClickListener" />

        <variable
            name="locateClick"
            type="android.view.View.OnClickListener" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".view.activity.MainActivity">

        <com.amap.api.maps.MapView
            android:id="@+id/activity_main_map"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:onClick="@{mapClick}" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/activity_main_fab_locate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="180dp"
            android:backgroundTint="#FFFFFF"
            android:onClick="@{locateClick}"
            android:src="@drawable/ic_activity_main_locate"
            app:borderWidth="0dp"
            app:fabSize="normal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="@dimen/activity_main_tab_height"
            android:elevation="15dp">

            <androidx.fragment.app.FragmentContainerView
                android:id="@+id/activity_main_bottom_sheet_container"
                android:name="com.example.easygo.view.fragment.NormalFragment"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/activity_main_bottom_sheet_bg"
                app:behavior_peekHeight="@dimen/normal_map_sheet_height"
                app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior" />
        </androidx.coordinatorlayout.widget.CoordinatorLayout>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/activity_main_fab_layer"
            style="smallF"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="90dp"
            android:layout_marginEnd="20dp"
            android:backgroundTint="#FFFFFF"
            android:onClick="@{layerClick}"
            app:borderWidth="0dp"
            app:fabSize="mini"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/activity_main_search_result_bar"
            app:srcCompat="@drawable/ic_activity_main_fab_layer" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/activity_main_fab_traffic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="20dp"
            android:backgroundTint="#FFFFFF"
            android:onClick="@{trafficClick}"
            app:borderWidth="0dp"
            app:fabSize="mini"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/activity_main_search_result_bar"
            app:srcCompat="@drawable/ic_activity_main_fab_traffic_true" />

        <LinearLayout
            android:id="@+id/activity_main_search_result_bar"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/activity_main_search_result_bg"
            android:elevation="5dp"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/activity_main_search_result_back_iv"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_gravity="center_vertical"
                android:layout_margin="10dp"
                android:onClick="@{backClick}"
                android:src="@drawable/ic_back" />

            <TextView
                android:id="@+id/activity_main_search_result_tv"
                style="@style/TextAppearance.AppCompat.Light.SearchResult.Title"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:lines="1"
                tools:text="这是搜索结果" />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="15dp"
                android:layout_marginBottom="10dp"
                android:background="@color/color_line_bg" />

            <ImageView
                android:id="@+id/activity_main_search_result_cancel_iv"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="15dp"
                android:onClick="@{cancelClick}"
                android:src="@drawable/ic_cancel" />
        </LinearLayout>

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/activity_main_tabs_bottom"
            style="@style/CustomTab"
            android:layout_width="match_parent"
            android:layout_height="@dimen/activity_main_tab_height"
            android:layout_gravity="bottom"
            android:background="#FFFFFF"
            android:elevation="20dp"
            android:paddingBottom="5dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <com.google.android.material.tabs.TabItem
                android:id="@+id/activity_main_tab_home"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/activity_main_tabs_bottom_text_home" />

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/activity_main_tabs_bottom_text_travel" />

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/activity_main_tabs_bottom_text_mine" />
        </com.google.android.material.tabs.TabLayout>


        <FrameLayout
            android:id="@+id/activity_main_progress_dialog"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#66000000"
            android:elevation="20dp"
            android:visibility="gone" />

        <ProgressBar
            android:id="@+id/activity_main_progress_bar"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="10dp"
            android:elevation="22dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@id/activity_main_progress_dialog_bg"
            app:layout_constraintStart_toStartOf="@id/activity_main_progress_dialog_bg"
            app:layout_constraintTop_toTopOf="@id/activity_main_progress_dialog_bg" />

        <TextView
            android:id="@+id/activity_main_progress_dialog_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:elevation="22dp"
            android:text="@string/activity_main_progress_bar_load_text"
            android:textColor="@color/colorPrimaryDark"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@id/activity_main_progress_dialog_bg"
            app:layout_constraintStart_toEndOf="@+id/activity_main_progress_bar"
            app:layout_constraintTop_toTopOf="@id/activity_main_progress_dialog_bg" />

        <View
            android:id="@+id/activity_main_progress_dialog_bg"
            android:layout_width="160dp"
            android:layout_height="50dp"
            android:background="#FFFFFF"
            android:elevation="20dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
